[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/MainMenue.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/BackgroundMenu.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/buttons/ButtonQuit.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/buttons/ButtonQuitPressed.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ui/buttons/ButtonPlay.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/buttons/ButtonPlayPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/buttons/ButtonSetting.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/buttons/ButtonSettingPressed.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/buttons/ButtonCredits.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/buttons/ButtonCreditsPressed.png" type="Texture" id=10]

[node name="MainMenue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 256.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 256.0

[node name="LeftButtons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 107.0
margin_bottom = 256.0
size_flags_horizontal = 2

[node name="BtnQuit" type="TextureButton" parent="MarginContainer/HBoxContainer/LeftButtons"]
margin_top = 165.75
margin_right = 107.0
margin_bottom = 256.0
rect_min_size = Vector2( 107, 90.25 )
size_flags_horizontal = 10
size_flags_vertical = 10
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="RightButtons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 325.0
margin_right = 480.0
margin_bottom = 256.0

[node name="BtnPlay" type="TextureButton" parent="MarginContainer/HBoxContainer/RightButtons"]
margin_right = 155.0
margin_bottom = 100.0
rect_min_size = Vector2( 155, 100 )
rect_pivot_offset = Vector2( 64.6443, 224.649 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="BtnSettings" type="TextureButton" parent="MarginContainer/HBoxContainer/RightButtons"]
margin_top = 104.0
margin_right = 155.0
margin_bottom = 164.0
rect_min_size = Vector2( 155, 60 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="BtnCredits" type="TextureButton" parent="MarginContainer/HBoxContainer/RightButtons"]
margin_top = 168.0
margin_right = 155.0
margin_bottom = 238.0
rect_min_size = Vector2( 155, 70 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 5
[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftButtons/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RightButtons/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RightButtons/BtnSettings" to="." method="_on_BtnSettings_pressed"]
